@@ -1,2 +1,9 @@
 * Forensic reports
 * HTTP report delivery
+* skip DMARC reporting for incoming DMARC reports
+  * destined to config->organization->email
+* automatically delete reports after X delivery failures
+
+# Maybe TODO:
+
+* detect > 1 From recipient, apply strongest policy
